# qibo-dbqa

./: README.md  pyproject.toml
.github/workflows/: rules.yml
src/qibo-dbqa/: double_bracket.py  double_bracket_evolution_oracles.py  group_commutator_iteration_transpiler.py  utils_dbr_strategies.py  utils_gci_optimization.py
src/qibo_dbqa/: __init__.py  compiling_XXZ.py  double_bracket.py  double_bracket_evolution_oracles.py  group_commutator_iteration_transpiler.py  utils.py  utils_dbr_strategies.py  utils_gci_optimization.py  utils_scheduling.py
tests/: conftest.py  test_models_dbi.py  test_models_dbi_utils.py
