[tool.poetry]
name = "qibo-dbqa"
version = "0.0.1"
description = ""
authors = ["Qiboteam"]
readme = "README.md"
packages = [{ include = "qibo_dbqa", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qibo = "^0.2.14"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pylint = "3.1.0"
qibojit = "^0.1.7"


[tool.poe.tasks]
test = "pytest"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests/']
filterwarnings = ['ignore::RuntimeWarning']
addopts = [
  '--cov=qibo',
  '--cov-append',
  '--cov-report=xml',
  '--cov-report=html',
  '--durations=60',
]
